# speech-and-language-processing

./: README.md  pyproject.toml
exercises/: __init__.py  ch2.py
exercises/ch2/: __init__.py  eliza_like.py  med.py
tests/: test_ch2.py
