[tool.poetry]
name = "speech-and-language-processing"
version = "0.1.0"
description = ""
authors = ["Muhammad Rafid Amrullah <rafid.tijarah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    '.', 'exercises'
]